V1.4 (Replaced ListView with TableView, along with other minor changes)